--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,7 @@
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
+
+.box-shadow {
+  box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.2);
+}
